LMS-1552 changed build script, changed server installation, changed startup/shutdown scripts
SVN: 16662