@@ -1,110 +1,100 @@
-#!/bin/bash
+#! /bin/bash
 
-nostartup=0
-if [[ "$1" = '-n' || "$1" = '--nostartup' ]]; then
-	nostartup=1
+usage() {
+	echo "Usage: $0 [--port <port number>] <server folder>"
+	exit 1
+}
+
+# Checks whether the number of arguments is smaller than one.
+# We at least need the server folder.
+check_arguments() {
+	if [ $# -lt 1 ]; then
+		usage
+	fi
+}
+
+check_arguments $@
+JETTY_PORT=8443
+if [ $1 == "--port" ]; then
+	shift
+	check_arguments $@
+	JETTY_PORT=$1
 	shift
 fi
+check_arguments $@
 
-if [ $# -lt 1 ]; then
-    echo "Usage: $0 [--nostartup] <server folder> [<service properties file> <startup properties file>]"
-    echo "  --nostartup: do not start up tomcat automatically"
-    exit 1
-fi
-
+# Installation folder: where the distribution zip file has been unzipped (and where this script resides)
 installation_folder="`dirname $0`"
 if [ ${installation_folder#/} == ${installation_folder} ]; then
 	installation_folder="`pwd`/${installation_folder}"
 fi
-server_folder="$1"
-shift
+# Where the server will be installed.
+server_folder=$1
 
 if [ ${server_folder#/} == ${server_folder} ]; then
 	server_folder="`pwd`/${server_folder}"
 fi
 
-properties_file="${installation_folder}/service.properties"
-startup_properties_file="${installation_folder}/openbis.conf"
-# Check whether given properties files exist and are regular file.
-if [ "$1" -a "$2" ]; then
-	if [ ! -f "$1" ]; then
-		echo "Given properties file '$1' does not exist!"
-		exit 1
-	fi
-	properties_file="$1"
-	shift
-	if [ "${properties_file#/}" == "${properties_file}" ]; then
-		properties_file="`pwd`/${properties_file}"
-	fi
-        if [ ! -f "$1" ]; then
-                echo "Given properties file '$1' does not exist!"
-                exit 1
-        fi
-        startup_properties_file="$1"
-        shift
-        if [ "${startup_properties_file#/}" == "${startup_properties_file}" ]; then
-                startup_properties_file="`pwd`/${startup_properties_file}"
-        fi
-fi
+properties_file="$installation_folder/service.properties"
+logconf_file="$installation_folder/log.xml"
 
-rel_tomcat_folder="apache-tomcat-`cat \"${installation_folder}/tomcat-version.txt\"`"
-tomcat_folder="${server_folder}/${rel_tomcat_folder}"
-rel_openbis_web_folder=webapps/openbis
-openbis_web_folder="${tomcat_folder}/${rel_openbis_web_folder}"
-rel_openbis_web_inf=${rel_openbis_web_folder}/WEB-INF
-openbis_web_inf="${tomcat_folder}/${rel_openbis_web_inf}"
-startup_script_path="${tomcat_folder}/bin/startup.sh"
+rel_jetty_folder="jetty-`cat $installation_folder/jetty-version.txt`"
+jetty_folder="${server_folder}/${rel_jetty_folder}"
 
 # Creates server folder.
-mkdir -p "${server_folder}"
+mkdir -p "$server_folder"
 
-# Checks whether a tomcat folder already exists.
-if [ -d "${tomcat_folder}" ]; then
-	echo "There exists already a Tomcat folder."
-	echo "Please shutdown and remove this Tomcat installation"
+# Checks whether a jetty folder already exists.
+if [ -d $jetty_folder ]; then
+	echo "There exists already a Jetty folder."
+	echo "Please shutdown and remove this Jetty installation"
 	echo "or choose another server folder."
 	exit 1
 fi
 
-unzip -q "${installation_folder}/apache-tomcat.zip" -d "$server_folder"
-cp -p "${installation_folder}"/openBIS.keystore "${tomcat_folder}"
-cp -p "${installation_folder}/server.xml" "${tomcat_folder}/conf"
-cp -p "${installation_folder}/passwd.sh" "${tomcat_folder}/bin"
-chmod 755 "${tomcat_folder}/bin/passwd.sh"
-STARTUP_TMP=`mktemp startup.sh.XXXXXX`
-sed -e "33i\\
-source \${PRGDIR}/../etc/openbis.conf\\
-CATALINA_OPTS=\"\${JAVA_OPTS:=-server -Djavax.net.ssl.trustStore=openBIS.keystore} \${JAVA_MEM_OPTS:=-Xmx2048m -Xms512m -XX:MaxPermSize=256m} -Ddatabase.create-from-scratch=false -Ddatabase.script-single-step-mode=false\"\\
-export CATALINA_OPTS\\
-\\
-if [ \${PRGDIR#/} == \${PRGDIR} ]; then\\
-        PRGDIR=\"\`pwd\`/\${PRGDIR}\"\\
-fi\\
-cd \"\${PRGDIR}/..\"\\
-" -e "s/\/bin\/sh/\/bin\/bash/" "${startup_script_path}" "${startup_script_path}" > ${STARTUP_TMP}
-mv ${STARTUP_TMP} "${startup_script_path}"
-chmod 744 "${tomcat_folder}"/bin/*.sh
+echo Unzipping Jetty...
+# Files are unzipped in $rel_jetty_folder
+unzip -q "$installation_folder/jetty.zip" -d "$server_folder"
+test -f "$installation_folder"/jetty.xml && cp -p "$installation_folder"/jetty.xml "$jetty_folder"/etc
+test -f "$jetty_folder"/etc/keystore && rm "$jetty_folder"/etc/keystore
+cp -p "$installation_folder"/openBIS.keystore "$jetty_folder"/etc
 
-unzip -q "${installation_folder}/openBIS.war" -d "${openbis_web_folder}"
-mkdir "${openbis_web_inf}/conf"
+echo Preparing and installing web archive...
+war_file=openbis.war
+war_classes=WEB-INF/classes
+mkdir -p "$war_classes"/etc
+# Replace 'service.properties' and 'log.xml' files in war
+test -f "$properties_file" && cp -p "$properties_file" "$war_classes/"
+test -f "$logconf_file" && cp -p "$logconf_file" "$war_classes/etc/"
+zip "$installation_folder"/$war_file "$war_classes"/service.properties "$war_classes"/etc/log.xml *.js *.html images/*
+#cp -p "$installation_folder"/$war_file "$jetty_folder"/webapps
+cp -p "$installation_folder"/$war_file "$jetty_folder"
+rm -rf WEB-INF
 
-# Copy configuration files
+# Create symlinks for easier access.
+cd "$server_folder"
+ln -s "${rel_jetty_folder}" jetty
+cd jetty/etc
+ln -s ../work/openbis/webapp/WEB-INF/classes/service.properties .
+ln -s ../work/openbis/webapp/WEB-INF/classes/etc/log.xml .
+ln -s ../bin/jetty.properties .
+cd ../..
 
-mkdir  "${tomcat_folder}/etc"
-cp -p "${properties_file}" "${openbis_web_inf}/classes/service.properties"
-echo Given properties file \'${properties_file}\' copied to \'${openbis_web_inf}/classes/service.properties\'
-cp -p "${startup_properties_file}" "${tomcat_folder}/etc/"
-echo Given properties file \'${startup_properties_file}\' copied to \'${tomcat_folder}/etc/\'
+JETTY_BIN_DIR="$jetty_folder"/bin
+cp -p "$installation_folder"/startup.sh "$JETTY_BIN_DIR"
+cp -p "$installation_folder"/shutdown.sh "$JETTY_BIN_DIR"
+cp -p "$installation_folder"/setup-env "$JETTY_BIN_DIR"
 
-# Create symlinks for easier access
+# Create a file called 'jetty.properties'.
+JETTY_PROPERTIES="$JETTY_BIN_DIR"/jetty.properties
+cat "$installation_folder"/openbis.conf > "$JETTY_PROPERTIES"
+echo "" >> "$JETTY_PROPERTIES"
+echo "# Jetty options" >> "$JETTY_PROPERTIES"
+echo "JETTY_PORT=$JETTY_PORT" >> "$JETTY_PROPERTIES"
+echo "JETTY_STOP_PORT=8079" >> "$JETTY_PROPERTIES"
+echo "JETTY_STOP_KEY=secret" >> "$JETTY_PROPERTIES"
 
-cd "${server_folder}"
-ln -s "${rel_tomcat_folder}" apache-tomcat
-cd "${tomcat_folder}"
-ln -s "../${rel_openbis_web_inf}"/classes/service.properties etc/
-cp -p "${rel_openbis_web_inf}"/classes/etc/passwd etc/
+# Create a 'work' directory in jetty folder. Web applications will be unpacked there.
+mkdir -p "$jetty_folder"/work
 
-if [ "$nostartup" -eq 0 ]; then
-	echo Starting tomcat...
-	bin/startup.sh
-fi
+cd "$jetty_folder"
